--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "vite-demo",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://{trungbnk2000}.github.io/{MyCV}/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "check": "eslint src --ext jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "pre-commit": "check",
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
